--- a/workers/voice/package.json
+++ b/workers/voice/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "neodate-voice",
+  "name": "heaven-voice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "db:create": "wrangler d1 create neodate-voice",
-    "db:migrate": "wrangler d1 execute neodate-voice --file=schema.sql",
-    "db:migrate:local": "wrangler d1 execute neodate-voice --local --file=schema.sql"
+    "db:create": "wrangler d1 create heaven-voice",
+    "db:migrate": "wrangler d1 execute heaven-voice --file=schema.sql",
+    "db:migrate:local": "wrangler d1 execute heaven-voice --local --file=schema.sql"
   },
   "dependencies": {
     "agora-token": "^2.0.3",
