--- a/workers/vpn-status/package.json
+++ b/workers/vpn-status/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "db:create": "wrangler d1 create neodate-vpn",
-    "db:migrate": "wrangler d1 execute neodate-vpn --file=src/schema.sql"
+    "db:create": "wrangler d1 create heaven-vpn",
+    "db:migrate": "wrangler d1 execute heaven-vpn --file=src/schema.sql"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
